# libtasn1

./: .clcopying  .cvsignore  .cvsusers  .gitignore  .gitlab-ci.yml  .gitmodules  .lgtm.yml  .x-sc_GPL_version  .x-sc_makefile_check  .x-sc_program_name  .x-sc_prohibit_HAVE_MBRTOWC  .x-sc_prohibit_atoi_atof  .x-sc_prohibit_empty_lines_at_EOF  .x-sc_space_tab  .x-sc_texinfo_acronym  .x-sc_trailing_blank  .x-sc_useless_cpp_parens  AUTHORS  CONTRIBUTING.md  ChangeLog  GNUmakefile  LICENSE  Makefile.am  NEWS  README  README-alpha  README.md  THANKS  acconfig.h  acinclude.m4  bootstrap  bootstrap.conf  buildconf  cfg.mk  configure.ac  configure.in  gtk-doc.make  maint-cfg.mk
devel/: ABI-x86_64.dump  announcement_template.txt  libtasn1-4.13-x86_64.abi  libtasn1-latest-x86_64.abi  release
doc/: .cvsignore  Makefile.am  README.autoconf  TODO  announce.txt  asn1.tex  fdl-1.3.texi  gdoc  gendocs_template  libtasn1.texi  release-process.txt
doc/cyclo/: Makefile.am  cyclo-libtasn1.html
doc/reference/: .cvsignore  Makefile.am  libtasn1-docs.sgml  libtasn1-docs.xml
doc/reference/tmpl/: .cvsignore
examples/: CertificateExample.c  CrlExample.c  Makefile.am  pkix.asn  (+1 more)
fuzz/: Makefile.am  README.md  asn1_decode_simple_ber_fuzzer.c  asn1_decode_simple_der_fuzzer.c  asn1_get_length_ber_fuzzer.c  asn1_get_length_der_fuzzer.c  asn1_get_object_id_der_fuzzer.c  corpus2array.c  find_buggy_corpus  fuzzer.h  get_ossfuzz_corpora  libtasn1_array2tree_fuzzer.c  libtasn1_encoding_fuzzer.c  libtasn1_encoding_fuzzer.dict  libtasn1_gnutls_der_fuzzer.c  libtasn1_parser2tree_fuzzer.c  libtasn1_pkix_der_fuzzer.c  main.c  run-clang.sh
fuzz/libtasn1_array2tree_fuzzer.in/: leak-0c471f45a75a27da43b0f910f1d73b62b6f03ddd
fuzz/libtasn1_array2tree_fuzzer.repro/: clusterfuzz-testcase-minimized-libtasn1_array2tree_fuzzer-5629965843824640  clusterfuzz-testcase-minimized-libtasn1_array2tree_fuzzer-5740385426472960
fuzz/libtasn1_encoding_fuzzer.in/: Test_encoding.asn  oom-3f825c1dc37e6ec1784e46878612e7e1c6d2310a
fuzz/libtasn1_parser2tree_fuzzer.in/: pkix.asn
fuzz/libtasn1_parser2tree_fuzzer.repro/: clusterfuzz-testcase-minimized-libtasn1_parser2tree_fuzzer-5655437101236224  clusterfuzz-testcase-minimized-libtasn1_parser2tree_fuzzer-5671277624295424
lib/: .cvsignore  ASN.c  ASN.y  ASN1.c  ASN1.y  Makefile.am  asn1.c  coding.c  decoding.c  defines.h  der.c  der.h  element.c  element.h  errors.c  errors.h  gstr.c  gstr.h  int.h  libasn1.h  libtasn1-config.in  libtasn1.h  libtasn1.map  libtasn1.pc.in  libtasn1.vers  mem.h  parser_aux.c  parser_aux.h  structure.c  structure.h  version.c  xml_print.c
lib/gl/: Makefile.am  hash-pjw-bare.c  hash-pjw-bare.h  limits.in.h  minmax.h  stddef.in.h  stdint.in.h  string.in.h  sys_types.in.h
lib/gl/doc/: gendocs_template.diff
lib/gl/override/m4/: valgrind-tests.m4.diff
lib/gl/top/: README-release.diff
lib/gllib/: Makefile.am  hash-pjw-bare.c  hash-pjw-bare.h  stdint.in.h  string.in.h  wchar.in.h
lib/glm4/: gnulib-cache.m4  gnulib-comp.m4
lib/includes/: libtasn1.h  libtasn1.h.in
lib/windows/: config.h  libtasn1.ncb  libtasn1.sln  libtasn1.vcproj
src/: .cvsignore  CertificateExample.c  CrlExample.c  Makefile.am  asn1Coding.c  asn1Coding_test.asg  asn1Decoding.c  asn1Parser.c  asn1c.c  benchmark.c  benchmark.h  pkix_asn1_tab.c
tests/: .cvsignore  CVE-2018-1000654-1.asn  CVE-2018-1000654-2.asn  CVE-2018-1000654.c  Makefile.am  Test_choice.c  Test_choice_ocsp.c  Test_encdec.c  Test_encoding.asn  Test_encoding.c  Test_errors.c  Test_indefinite.c  Test_overflow.c  Test_parser.asn  Test_parser.c  Test_simple.c  Test_strings.c  Test_tree.asn  Test_tree.c  Test_tree_asn1_tab.c  benchmark  benchmark.sh  built-in-type.asn  cert-invalid-time.der  cert-reenc.c  coding  coding-decoding2.c  coding-long-oid.c  coding.sh  copynode.c  crlf  crlf.sh  decoding  decoding-inf  decoding-invalid-pkcs7.sh  decoding-invalid-x509  decoding-invalid-x509.sh  decoding.sh  invalid-assignments1.txt  invalid-assignments2.txt  (+19 more)
tests/invalid-pkcs7/: id-000001.der
tests/invalid-x509/: id-000002,orig-TFPA-2015-002-libtasn1-4.3-stack-overflow.crt.der  id-000047,orig-id-000009,src-000044,op-havoc,rep-2.der  id-000116,orig-id-000026,src-000000,op-havoc,rep-32,+cov.der  id-000164,orig-id-000038,src-000000,op-havoc,rep-64,+cov.der  id-000168,orig-id-000039,src-000000,op-havoc,rep-128.der  id-000243,orig-id-000067,src-000039,op-havoc,rep-2.der  id-000247,orig-id-000069,src-000039,op-havoc,rep-2.der  id-000327,orig-id-000129,src-000112,op-havoc,rep-2.der  id-000334,orig-id-000136,src-000016+000011,op-splice,rep-8,+cov.der  id-000347,src-000001,op-flip1,pos-8,+cov.der  id-000399,src-000001,op-flip1,pos-104.der  id-000415,src-000001,op-flip1,pos-228,+cov.der  id-000459,src-000001,op-flip2,pos-23,+cov.der  id-000469,src-000001,op-flip2,pos-542,+cov.der  id-000476,src-000001,op-flip2,pos-739.der  id-000487,src-000001,op-flip4,pos-739.der  id-000492,src-000001,op-flip8,pos-36,+cov.der  id-000503,src-000001,op-arith8,pos-104,val--17,+cov.der  id-000517,src-000001,op-int8,pos-11,val--128,+cov.der  id-000519,src-000001,op-int8,pos-21,val--128,+cov.der  id-000521,src-000001,op-int8,pos-34,val--128,+cov.der  id-000523,src-000001,op-int8,pos-43,val--128,+cov.der  id-000532,src-000001,op-int8,pos-516,val--128,+cov.der  id-000535,src-000001,op-int8,pos-739,val-+127.der  id-000565,src-000001,op-int32,pos-104,val-+255,+cov.der  id-000566,src-000001,op-int32,pos-178,val-be--128,+cov.der  id-000582,src-000001,op-havoc,rep-2.der  id-000587,src-000001,op-havoc,rep-2,+cov.der  id-000592,src-000001,op-havoc,rep-32,+cov.der  id-000595,src-000001,op-havoc,rep-2,+cov.der  id-000600,src-000001,op-havoc,rep-8,+cov.der  id-000601,src-000001,op-havoc,rep-8,+cov.der  id-000629,src-000003,op-arith8,pos-205,val--26,+cov.der  id-000636,src-000003,op-int8,pos-205,val--128,+cov.der  id-000648,src-000003,op-havoc,rep-8.der  id-000649,src-000003,op-havoc,rep-2,+cov.der  id-000652,src-000003,op-havoc,rep-4.der  id-000654,src-000003,op-havoc,rep-16.der  id-000658,src-000003,op-havoc,rep-4.der  id-000660,src-000003,op-havoc,rep-4.der  (+520 more)
(+39 files in other folders)
